added raw js file for save the older code

--- a/banking.html
+++ b/banking.html
@@ -58,6 +58,7 @@
 
         <!-- App.Js -->
         <script src="js/banking.js"></script>
+        <script src="js/raw.js"></script>
 </body>
 
 </html>
